gave header som spacing to prevent overlap, fixed tile layout transitions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,7 @@ header {
     color: white;
     max-width: 75vw;
     margin: 0 auto;
+    margin-bottom: 1.5em;
 }
 
 main {
@@ -34,10 +35,9 @@ main {
 .tile {
     display: flex;
     flex-direction: column;
-    flex: ;
     border: 3px dashed white;
-    width: 32%;
-    margin: 2px;
+    width: 25%;
+    margin: 1em;
     color: var(--primary);
     min-height: 100%;
 }
@@ -77,7 +77,7 @@ footer {
 
 @media screen and (max-width : 992px) {
     .tile {
-        width: 49%;
+        width: 42%;
     }
 }
 
